
2021-02-24	version	00-000C
	WARNING: The previous warning (on version 00-000B) also applies to this version.
	Changed default size of window to 800x800 and merged src/position.c and src/position_list.c

	source file changes
		* src/position.c: merged file with position_list.c

	header file changes
		* include/vgcp.h: changed default window size definitions, slightly changed wording of warnings

	Edit 2021-02-25: added warning

2021-02-25	version	00-000D
	GOOD NEWS: The checkmate related bug has been fixed.
	Fixed the odd checkmate related bug (stalemates resulting in checkmates for example), moved the kingLocation variable to the position structure, fixed other errors.

	source file changes
		* src/position.c (initPosition): moved kingLocation initializing here
		* src/move.c (movePiece): fixed kingLocation not being properly set
		* src/draw.c (drawBoardRow): now the tile that the king is in (according to king location)
			is red.
		* src/piece.c (mapKingPotentialMoves): fixed a bug allowing players to castle 
			even after castling rights have been lost if the other player still has castling
			rights.

2021-02-26	version 00-000E
	Now the program repitition checker checks for en passant rights also (very untested at the moment)

	source file changes
		* src/position.c (initPosition): initializes en passant rights
		* src/position.c (checkForRepitition): now checks if en passant rights repeat
		* src/move.c (movePiece): now updates en passant rights when a pawn is moved
	
	header file changes
		* include/vgcp.h: added the enPassantRights array to the position structure

	EDIT 2021-02-26: fixed sentence

2021-02-26	version 00-000F
	Removed the _NO_PERSPECTIVE_CHANGE option and removed support for changing perspective, removed unnecessary delays

	source file changes
		* src/draw.c (drawBoard): removed support for changing perspective

	header file changes
		* include/config.h: removed the _NO_PERSPECTIVE_CHANGE option